--- a/dashboard/src/scss/style.scss
+++ b/dashboard/src/scss/style.scss
@@ -13,5 +13,6 @@
 @import './components/VTextField';
 @import './components/VTabs';
 @import './components/VScrollbar';
+@import './components/VLanguage';
 
 @import './pages/dashboards';
