--- a/dashboard/src/scss/style.scss
+++ b/dashboard/src/scss/style.scss
@@ -4,6 +4,9 @@
 @import './layout/container';
 @import './layout/sidebar';
 
+@import 'github-markdown-css/github-markdown.css';
+@import './markdown';
+
 @import './components/VButtons';
 @import './components/VCard';
 @import './components/VField';
@@ -16,5 +19,3 @@
 @import './components/VLanguage';
 
 @import './pages/dashboards';
-
-@import './markdown';
